kubernetes/aks_5_service_mesh/part_3_linkerd/examples/dgraph/net_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd
spec:
  # deny all traffic from outside cluster
  podSelector: {}
  ingress:
    # allow any pod in same namespace
    - from:
        - podSelector: {}
    # allow pydgraph-client from any namespace
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: pydgraph-client
      ports:
        - port: 4143
        - port: 4190
        - port: 4140
        - port: 8080
        - port: 9080
