kubernetes/aks_5_service_mesh/part_3_linkerd/examples/dgraph/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dgraph-allow-linkerd
  namespace: dgraph
spec:
  podSelector:
    matchLabels:
      app: dgraph
      component: alpha
  ingress:
    # allow access to any pod in the same namespace
    - from:
        - podSelector: {}
    # allow only pods from any namespace that are part of service mesh
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              linkerd.io/control-plane-ns: linkerd
      ports:
        - port: 9080
        - port: 8080
